@@ -22,8 +22,8 @@ android {
         applicationId 'com.stanleyidesis.quotograph'
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 13
-        versionName "1.1.3"
+        versionCode 14
+        versionName "1.1.4"
     }
     buildTypes {
         release {
